fix: show sidebar-toggle on tablet

--- a/src/components/layout/sidebar-toggle/sidebar-toggle.module.scss
+++ b/src/components/layout/sidebar-toggle/sidebar-toggle.module.scss
@@ -3,7 +3,7 @@
 .sidebar-toggle {
   display: none;
 
-  @include mobile {
+  @include tablet {
     display: block;
   }
 }
